--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.19.3",
+    "axios": "^0.26.1",
     "emailjs": "^3.8.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
