--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.2.3",
     "react-scripts": "^4.0.2",
     "sass": "^1.49.10",
     "smooth-scroll": "^16.1.3"
