--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet-async": "^1.2.3",
-    "react-scripts": "^4.0.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-scripts": "^5.0.0",
     "sass": "^1.49.10",
     "smooth-scroll": "^16.1.3"
   },
